--- a/index.html
+++ b/index.html
@@ -10,13 +10,29 @@
          rel="stylesheet"
       >
       <link rel="stylesheet" href="style.css">
+      <script src="./main.js" defer></script>
       <title>OriginSix</title>
    </head>
    <body>
       <header class="header">
          <nav class="container">
             <a href="#" class="logo">beauty<span>salon</span>.</a>
-            <div class="menu">...</div>
+            <div class="menu" role="menu" aria-expanded="false">
+               <div class="close toggle" aria-label="Fechar Menu" aria-controls="menu">
+                  <img src="./assets/close.svg" alt="Fechar Menu">
+               </div>
+               <ul class="nav-items">
+                  <li><a class="title" href="#home">Início</a></li>
+                  <li><a class="title" href="#about">Sobre</a></li>
+                  <li><a class="title" href="#services">Serviços</a></li>
+                  <li><a class="title" href="#testimonials">Depoimentos</a></li>
+                  <li><a class="title" href="#contact">Contato</a></li>
+               </ul>
+            </div>
+
+            <div class="open toggle" aria-label="Abrir Menu" aria-controls="menu">
+               <img src="./assets/menu.svg" alt="Menu">
+            </div>
          </nav>
       </header>
 
@@ -30,7 +46,7 @@
                   >
               </div>
                <div class="text">
-                  <h1>Saúde natural para os seus cabelos</h1>
+                  <h1 class="title">Saúde natural para os seus cabelos</h1>
             
                   <p>Um salão exclusivo em São Paulo, especializado em tratamento naturais.</p>
             
@@ -41,9 +57,90 @@
 
          <div class="divider-1"></div>
 
-         <section class="section">
-            <div class="container">
-               <h2>teste</h2>
+         <section class="section" id="about">
+            <div class="container grid">
+               <div class="image">
+                  <img 
+                     src="https://images.unsplash.com/photo-1559599101-f09722fb4948?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" 
+                     alt="Três mulheres cabeleireiras"
+                  >
+               </div>
+               <div class="text">
+                  <h2 class="title">Sobre nós</h2>
+                  <p>
+                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia et, 
+                     doloribus sit officiis voluptatum alias sequi laudantium aliquid commodi unde 
+                     assumenda necessitatibus ducimus nobis maxime, soluta fuga labore eaque. 
+                     Temporibus.
+                  </p>
+                  <br>
+                  <p>
+                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia et, 
+                     doloribus sit officiis voluptatum alias sequi laudantium aliquid commodi unde 
+                     assumenda necessitatibus ducimus nobis maxime, soluta fuga labore eaque. 
+                     Temporibus.
+                  </p>
+                  <br>
+                  <p>
+                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia et, 
+                     doloribus sit officiis voluptatum alias sequi laudantium aliquid commodi unde 
+                     assumenda necessitatibus ducimus nobis maxime, soluta fuga labore eaque. 
+                     Temporibus.
+                  </p>
+               </div>
+            </div>
+         </section>
+
+         <div class="divider-2"></div>
+
+         <section class="section" id="services">
+            <div class="container grid">
+               <header>
+                  <h2 class="title">Serviços</h2>
+                  <p>
+                     Com mais de 10 anos no mercado, o <strong>Beautysalon</strong> já conquistou clientes 
+                     de inúmeros países com seus tratamentos exclusivos e totalmente naturais
+                  </p>
+               </header>
+
+               <div class="cards grid">
+                  <div class="card">
+                     <div class="icon">
+                        <img src="./assets/woman-hair.svg" alt="Terapia Capilar">
+                     </div>
+                     <h3 class="title">Terapia Capilar</h3>
+                     <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Perspiciatis a beatae consectetur laboriosam commodi aliquam in hic 
+                        pariatur modi iste quas, ut id saepe? Enim adipisci qui explicabo 
+                        minima blanditiis.
+                     </p>
+                  </div>
+                  <div class="card">
+                     <div class="icon">
+                        <img src="./assets/trim.svg" alt="Cortes">
+                     </div>
+                     <h3 class="title">Cortes</h3>
+                     <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Perspiciatis a beatae consectetur laboriosam commodi aliquam in hic 
+                        pariatur modi iste quas, ut id saepe? Enim adipisci qui explicabo 
+                        minima blanditiis.
+                     </p>
+                  </div>
+                  <div class="card">
+                     <div class="icon">
+                        <img src="./assets/cosmetic.svg" alt="Tratamento">
+                     </div>
+                     <h3 class="title">Tratamento</h3>
+                     <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Perspiciatis a beatae consectetur laboriosam commodi aliquam in hic 
+                        pariatur modi iste quas, ut id saepe? Enim adipisci qui explicabo 
+                        minima blanditiis.
+                     </p>
+                  </div>
+               </div>
             </div>
          </section>
       </main>
