--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
       <link rel="stylesheet" href="style.css">
       <script src="https://unpkg.com/swiper/swiper-bundle.min.js" defer></script>
-      <script src="https://unpkg.com/scrollreveal" defer></script>
+      <script src="https://unpkg.com/scrollreveal" defer ></script>
       <script src="./main.js" defer></script>
       <title>OriginSix</title>
    </head>
@@ -249,6 +249,34 @@
                </div>
             </div>
          </section>
+
+         <div class="divider-1"></div>
       </main>
+
+      <footer class="section">
+         <div class="container grid">
+            <div class="brand logo">
+               <a href="#" class="logo alt">beauty<span>salon</span>.</a>
+               <p>©2021 Beautysalon.</p>
+               <p>Todos os direitos reservados</p>
+            </div>
+
+            <div class="socials" target="_blank" rel="noopener noreferrer">
+               <a href="https://www.instagram.com/raphacapeto/">
+                  <img src="./assets/instagram-white.svg" alt="Instagram">
+               </a>
+               <a href="https://www.facebook.com/raphael.capeto.7/" target="_blank" rel="noopener noreferrer">
+                  <img src="./assets/facebook-white.svg" alt="Facebook">
+               </a>
+               <a href="https://www.youtube.com/channel/UCSfwM5u0Kce6Cce8_S72olg" target="_blank" rel="noopener noreferrer">
+                  <img src="./assets/youtube-white.svg" alt="Youtube">
+               </a>
+            </div>
+         </div>
+      </footer>
+
+      <button class="btn-up" data-go="home">
+         <i class="icon-arrow-up">/\</i>
+      </button>
    </body>
 </html>
